fix video alignment

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1375,12 +1375,15 @@ p {
   padding-top: 20px;
   gap: 40px;
   flex-direction: row;
+  text-align: center;
   /*width: 1000px;*/
+  width: 80%;
   margin: auto;
 }
 
 .video-container > * {
   z-index: 100;
+  flex: 1 1 40%;
 }
 
 /***********************************************************************************************/
